--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.2.1",
+    "@types/d3": "^7.4.3",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
+    "d3": "^7.9.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "zustand": "^4.5.0",
-    "d3": "^7.9.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tailwindcss": "^3.4.0",
-    "@types/d3": "^7.4.3"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -23,14 +28,14 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.16",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "postcss": "^8.4.32",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "vite": "^7.1.7"
   }
 }
