--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "d3": "^7.9.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "tailwindcss": "^3.4.0",
